
  - (Issue 47) Error in plugin - problem with large object graphs
  - Updated min requirement for FirePHPCore library to 0.2.0
  - Added style to notices in variable renderer

2008-10-07 - Release Version: 0.2.b.2

  - Added private/protected/public/undeclared/static visibility indicators to objects in variable viewer
  - (Issue 28) Need solution for logging private and protected object variables
  - (Issue 42) TRACE and EXCEPTION not working on windows servers
  - Bugfix in Wildfire JsonProtocol handler to allow Index message in any position

2008-10-01 - Release Version: 0.2.b.1

  - Added support for displaying ErrorExceptions raised by trigger_error()
  - (Issue 25) Wrong order in FireBug Console
  - Removed dependency on jQuery for Ajax requests
  - Added info message with link in console when server library is not latest available
  - Added detection and recording of server wildfire plugin version
  - Fix for Wildfire JsonStream to allow Wf-*-Index header to be sent in any position
  - Fix for TABLE logging style to allow table label in meta.label as well as data[0]
  - (Issue 31) Log messages with labels reproduced as Array(2) in firebug console
  - Added support for console groups
  - Added support for message labels when using the wildfire protocol
  - Added resizing links to variable viewer overlay and persist last size in preferences
  - (Issue 11) Variable inspection for arrays logged to console
  - (Issue 30) Allow explicit wrapping of logging data
  - Major work on new variable renderers for console
  - (Issue 16) Escape HTML in variable values
  - Capitalized FALSE, TRUE, NULL in variable renderer overlay
  - Changed variable renderer in overlay to use nested DIV's instead of whitespace for indentation
  - Updated link to discussion group/forum

2008-08-25 - Release Version: 0.1.2
2008-08-24 - Release Version: 0.1.1.2

  - (Issue 15) FirePHP does not display messages in the console with latest version of Firebug