@@ -12,7 +12,8 @@
   <script type="application/x-javascript" src="chrome://firephp/content/FirePHPLib.js"/>
   <script type="application/x-javascript" src="chrome://firephp/content/Wildfire/Wildfire.js"/>
   <script type="application/x-javascript" src="chrome://firephp/content/Wildfire/Channel/HttpHeaders.js"/>
-  <script type="application/x-javascript" src="chrome://firephp/content/Wildfire/Protocol/JsonStream.js"/>
+  <script type="application/x-javascript" src="chrome://firephp/content/Wildfire/Protocol/JsonStream-0.1.js"/>
+  <script type="application/x-javascript" src="chrome://firephp/content/Wildfire/Protocol/JsonStream-0.2.js"/>
   <script type="application/x-javascript" src="chrome://firephp/content/Wildfire/Plugin/FirePHP.js"/>
   <script type="application/x-javascript" src="chrome://firephp/content/FirePHP.js"/>
   <script type="application/x-javascript" src="chrome://firephp/content/FirebugNetOverride.js"/>
